# django-model-deprecater

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  manage.py  setup.cfg  setup.py  start_docker_database  tox.ini
django_model_deprecater/: exceptions.py  local_database_settings.py  routers.py
django_model_deprecater/tests/: test_exceptions.py  test_router.py  test_settings.py
django_model_deprecater/tests/sampleapp/: models.py
django_model_deprecater/tests/sampleapp/migrations/: 0001_initial.py
docker/postgres/: 01.database.sh
requirements/: base.txt  codestyles.txt  tests.txt
