[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[isort]
skip=.tox,ve
multi_line_output=5
known_standard_library=types
known_third_party=pytest,_pytest,django,six
sections = FUTURE,STDLIB,THIRDPARTY,OUR_THIRD_PARTY,FIRSTPARTY,LOCALFOLDER
order_by_type = True
line_length = 79
include_trailing_comma = True
